[package]
name    = "rlisp"
version = "0.1.0"
authors = ["yufrice <yufyuf@gmail.com>"]
edition = "2018"

[dependencies]
failure    = "0.1.5"
auto_enums = "0.4.1"
regex 	   = "1.1.2"
combine    = { version = "3.6.7", features =  ["std", "regex-1"] }
inkwell    = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
