[package]
name    = "rlisp"
version = "0.1.0"
authors = ["yufrice <yufyuf@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
failure    = "0.1.5"
auto_enums = "0.5.6"
regex 	   = "1.1.6"
combine    = { version = "3.8.1", features =  ["std", "regex-1"] }
inkwell    = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
